syntax = "proto3";

package com.primelog.cirrus.masterdata;

option java_package = "com.primelog.cirrus.masterdata.frontend.protoGen";
option java_outer_classname = "MasterDataProto";

service masterDataService {
    rpc getCountryOptions(CountryOptionRequest) returns (CountryOptionResponse) {}
    rpc getVersion(VersionRequest) returns (VersionResponse) {}
}

message VersionRequest {
}

message VersionResponse {
    string version = 1;
}

message CountryOptionRequest {
    string authenticationTicket = 1;
}

message CountryOptionResponse {
    repeated CountryOption countryOptions = 1;
}

message CountryOption {
    string code = 1;
    string description = 2;
}